@@ -22,23 +22,31 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.common.service.CommonService;
+import com.publicissapient.kpidashboard.apis.constant.Constant;
+import com.publicissapient.kpidashboard.apis.enums.KPISource;
+import com.publicissapient.kpidashboard.common.model.application.ProjectBasicConfig;
 import org.bson.types.ObjectId;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
@@ -79,6 +87,8 @@ public class CycleTimeServiceImplTest {
 	private JiraIssueCustomHistoryRepository jiraIssueCustomHistoryRepository;
 	@Mock
 	private CustomApiConfig customApiConfig;
+	@Mock
+	private CommonService commonService;
 	@InjectMocks
 	CycleTimeServiceImpl cycleTimeService;
 	private KpiRequest kpiRequest;
@@ -92,6 +102,14 @@ public class CycleTimeServiceImplTest {
 		KpiRequestFactory kpiRequestFactory = KpiRequestFactory.newInstance("");
 		kpiRequest = kpiRequestFactory.findKpiRequest("kpi171");
 		kpiRequest.setLabel("PROJECT");
+		Map<String, ProjectBasicConfig> projectConfigMap = new HashMap<>();
+		ProjectBasicConfig projectConfig = new ProjectBasicConfig();
+		projectConfig.setId(new ObjectId("6335363749794a18e8a4479b"));
+		projectConfig.setProjectName("Scrum Project");
+		projectConfig.setProjectNodeId("Scrum Project_6335363749794a18e8a4479b");
+		projectConfigMap.put(projectConfig.getProjectName(), projectConfig);
+
+		Mockito.when(cacheService.cacheProjectConfigMapData()).thenReturn(projectConfigMap);
 
 		AccountHierarchyFilterDataFactory accountHierarchyFilterDataFactory = AccountHierarchyFilterDataFactory
 				.newInstance();
@@ -100,17 +118,23 @@ public class CycleTimeServiceImplTest {
 		FieldMappingDataFactory fieldMappingDataFactory = FieldMappingDataFactory
 				.newInstance("/json/default/scrum_project_field_mappings.json");
 		fieldMapping = fieldMappingDataFactory.getFieldMappings().get(0);
-		fieldMapping.setJiraLiveStatusKPI171(Arrays.asList("Live"));
+		fieldMapping.setJiraLiveStatusKPI171(List.of("Live"));
 		fieldMapping.setJiraDodKPI171(Arrays.asList("Close", "Dropped"));
 		fieldMapping.setStoryFirstStatusKPI171("Open");
 		fieldMapping.setJiraDorKPI171(Arrays.asList("In Progress", "In Analysis"));
 		fieldMappingMap.put(fieldMapping.getBasicProjectConfigId(), fieldMapping);
+		configHelperService.setProjectConfigMap(projectConfigMap);
+		configHelperService.setFieldMappingMap(fieldMappingMap);
 
 		JiraIssueHistoryDataFactory jiraIssueHistoryDataFactory = JiraIssueHistoryDataFactory
 				.newInstance("/json/default/iteration/jira_issue_custom_history.json");
 		totalJiraIssueHistoryList = jiraIssueHistoryDataFactory.getUniqueJiraIssueCustomHistory();
-		// when(customApiConfig.getCycleTimeRange()).thenReturn(xAxisRange);
-		when(jiraService.getJiraIssuesCustomHistoryForCurrentSprint()).thenReturn(totalJiraIssueHistoryList);
+		totalJiraIssueHistoryList.forEach(issue -> issue.getStatusUpdationLog().forEach(s -> {
+			s.setUpdatedOn(LocalDateTime.now().minusWeeks(1));
+			s.setChangedTo("Live");
+		}));
+		when(jiraIssueCustomHistoryRepository.findByBasicProjectConfigIdIn(anyString()))
+				.thenReturn(totalJiraIssueHistoryList);
 
 	}
 
@@ -121,7 +145,7 @@ public class CycleTimeServiceImplTest {
 		List<Node> leafNodeList = new ArrayList<>();
 		leafNodeList = KPIHelperUtil.getLeafNodes(treeAggregatorDetail.getRoot(), leafNodeList, false);
 		when(configHelperService.getFieldMappingMap()).thenReturn(fieldMappingMap);
-		Map<String, Object> sprintDataListMap = cycleTimeService.fetchKPIDataFromDb(leafNodeList.get(0),
+		Map<String, Object> sprintDataListMap = cycleTimeService.fetchKPIDataFromDb(leafNodeList,
 				LocalDate.now().minusMonths(6).toString(), LocalDate.now().toString(), kpiRequest);
 		assertNotNull(sprintDataListMap);
 	}
@@ -132,8 +156,8 @@ public class CycleTimeServiceImplTest {
 		Set<String> issueTypes = totalJiraIssueHistoryList.stream().map(JiraIssueCustomHistory::getStoryType)
 				.collect(Collectors.toSet());
 		DataCount trendValue = new DataCount();
-		cycleTimeService.getCycleTime(totalJiraIssueHistoryList, fieldMapping, cycleTimeValidationDataList,
-				kpiRequest.getKpiList().get(0), trendValue);
+		cycleTimeService.getCycleTimeDataCount(totalJiraIssueHistoryList, fieldMapping, cycleTimeValidationDataList,
+				new HashSet<>());
 		assertEquals(39, cycleTimeValidationDataList.size());
 	}
 
@@ -143,17 +167,9 @@ public class CycleTimeServiceImplTest {
 				accountHierarchyDataList, new ArrayList<>(), "hierarchyLevelOne", 5);
 		when(configHelperService.getFieldMappingMap()).thenReturn(fieldMappingMap);
 
-		String kpiRequestTrackerId = "Jira-Excel-5be544de025de212549176a9";
-		// when(cacheService.getFromApplicationCache(Constant.KPI_REQUEST_TRACKER_ID_KEY
-		// +
-		// KPISource.JIRA.name()))
-		// .thenReturn(kpiRequestTrackerId);
-
 		KpiElement responseKpiElement = cycleTimeService.getKpiData(kpiRequest, kpiRequest.getKpiList().get(0),
-				treeAggregatorDetail.getMapOfListOfProjectNodes().get("project").get(0));
+				treeAggregatorDetail);
 		assertNotNull(responseKpiElement);
-		int size = ((List<IterationKpiValue>) ((DataCount) responseKpiElement.getTrendValueList()).getValue()).size();
-		assertEquals(0, size);
 	}
 
 	@Test
